| Summary: | ASTERISK-28372: Asterisk REPLY Wrong Contact header port (TCP) | ||
| Reporter: | Anton Satskiy (satskiy.a) | Labels: | |
| Date Opened: | 2019-04-04 03:57:45 | Date Closed: | 2020-04-21 10:20:26 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/TCP-TLS |
| Versions: | 13.25.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | CentOS release 6.10 (Final) Linux agrovoip 2.6.32-754.11.1.el6.x86_64 #1 SMP Tue Feb 26 15:38:56 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux | Attachments: | |
| Description: | I got Asterisk 13 running Behind NAT
Global Settings: UDP Bindaddress: 0.0.0.0:5160 TCP SIP Bindaddress: 0.0.0.0:5160 Network Settings: SIP address remapping: Enabled using externaddr Externhost: Externaddr: 94.179.146.230:0 Externrefresh: 10 Localnet: 192.168.1.0/255.255.255.0 By the way i use TCP as a SIP transport So what is do i do a *43 Echo Test call https://discourse-cdn-sjc1.com/asterisk/uploads/default/original/2X/a/a0f77e6b4046723ceafcd11d1db098a4a51b9e30.png invite is coming to 5160 port But in Reply from Asterisk i got 5060 port in Contact header thats why asterisk cant get ACK from extension https://discourse-cdn-sjc1.com/asterisk/uploads/default/original/2X/f/faeccb653ce32280b4f571a2f38decf8a81dbecf.png When i use UDP as a transport – everything is correct | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-04-04 03:57:46.515-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Joshua C. Colp (jcolp) 2019-04-08 05:24:42.257-0500 Thank you for taking the time to report this bug and helping to make Asterisk better. Unfortunately, we cannot work on this bug because your description did not include enough information. Please read over the Asterisk Issue Guidelines [1] which discusses the information necessary for your issue to be resolved and the format that information needs to be in. We would be grateful if you would then provide a more complete description of the problem. At a minimum, we need: 1. The specific steps or actions you took that caused you to encounter the problem. 2. The behavior you expected and the location of documentation that led you to that expectation. 3. The behavior you actually encountered. To demonstrate the issue in detail, please include Asterisk log files generated per the instructions on the wiki [2]. If applicable, please ensure that protocol-level trace debugging is enabled, e.g., 'sip set debug on' if the issue involves chan_sip, and configuration information such as dialplan and channel configuration. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines [2] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Anton Satskiy (satskiy.a) 2019-04-08 05:57:45.611-0500 1. The specific steps or actions you took that caused you to encounter the problem. STEP-BY-STEP install https://wiki.freepbx.org/display/FOP/Installing+FreePBX+13+on+CentOS+6 - setup External Address and Local network in SIP settings - then enable TCP for signalling - create EXT with nat=force_rport,comedia - connect EXT from outside of the nat - CALL echo test *43 2. The behavior you expected and the location of documentation that led you to that expectation. I expect to hear intro then my own voice 3. The behavior you actually encountered. i cant hear anything and call hangup after several seconds P.S AS U CAN SEE ABOVE ASTERISK SEND WRONG PORT NUMBER TO THE CLIENT thants why asterisk cant get ACK from client and call hanguped By: Joshua C. Colp (jcolp) 2019-04-08 06:00:26.933-0500 The chan_sip channel driver is in 'extended' support status and is supported only by community members. Your issue is in the queue. Your patience is appreciated as a community developer may work the issue when time and resources become available. Asterisk is an open source project and community members work the issues on a voluntary basis. You are welcome to develop your own patches and submit them to the project.[1] If you are not a programmer and you are in a hurry to see a patch provided then you might try rallying support on the Asterisk users mailing list or forums.[2] Another alternative is offering a bug bounty on the asterisk-dev mailing list.[3] Often a little incentive can go a long way. [1]: https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process [2]: http://www.asterisk.org/community/discuss [3]: https://wiki.asterisk.org/wiki/display/AST/Asterisk+Bug+Bounties By: Anton Satskiy (satskiy.a) 2019-04-08 06:08:35.802-0500 forgot to mention only one step was not from Freepbx wiki ./configure --with-pjproject-bundled --with-jansson-bundled --libdir=/usr/lib64 (as it is pref way to install pjproject-bundled ) By: Friendly Automation (friendly-automation) 2020-04-21 10:20:26.660-0500 Change 14297 merged by George Joseph: chan_sip: externhost/externaddr with non-default TCP/TLS ports. [https://gerrit.asterisk.org/c/asterisk/+/14297|https://gerrit.asterisk.org/c/asterisk/+/14297] By: Friendly Automation (friendly-automation) 2020-04-21 10:20:52.987-0500 Change 14296 merged by George Joseph: chan_sip: externhost/externaddr with non-default TCP/TLS ports. [https://gerrit.asterisk.org/c/asterisk/+/14296|https://gerrit.asterisk.org/c/asterisk/+/14296] By: Friendly Automation (friendly-automation) 2020-04-21 10:21:30.120-0500 Change 14295 merged by George Joseph: chan_sip: externhost/externaddr with non-default TCP/TLS ports. [https://gerrit.asterisk.org/c/asterisk/+/14295|https://gerrit.asterisk.org/c/asterisk/+/14295] By: Friendly Automation (friendly-automation) 2020-04-21 10:21:54.728-0500 Change 14275 merged by George Joseph: chan_sip: externhost/externaddr with non-default TCP/TLS ports. [https://gerrit.asterisk.org/c/asterisk/+/14275|https://gerrit.asterisk.org/c/asterisk/+/14275] | ||